# Hybrid-PQC-TLS-STM32

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  GIT_WORKFLOW.md  STM32F439XX_FLASH.ld  Test_pqc_tls Release.launch  Test_pqc_tls.ioc  benchmark_matrix_phases_n100_20260428.txt  benchmark_matrix_sizes_n100_20260428.txt  benchmark_matrix_sizes_x25519mlkem_20260428.txt  benchmark_matrix_timing_96_20260428.txt  benchmark_microbench_phase_e_20260429.txt  benchmark_microbench_sp_curve25519_20260430.txt  benchmark_n100_final.txt  benchmark_retest_phases_20260429.txt  benchmark_retest_sizes_20260429.txt  cmux.json  make_matrix_graphs.py  make_microbench_graphs.py  parse_matrix_log.py  parse_microbench.py  session_progress.md  uart_capture.py
Core/Inc/: FreeRTOSConfig.h  cert_bench.h  microbench.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tls_client.h  wolfssl_hybrid.h
Core/Src/: cert_bench.c  freertos.c  heap_regions.c  main.c  microbench.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  tls_client.c  wolfssl_hybrid.c
LWIP/App/: lwip.c
benchmark_graphs_archive_20260424/: README.md  benchmark_n100_final.txt
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
results/: benchmark_matrix_n100_20260427.txt  benchmark_matrix_phases_n100_20260427.txt  benchmark_matrix_phases_x25519mlkem_20260428.txt  benchmark_microbench_mlkem_20260430.txt  benchmark_n100_final.txt  benchmark_retest_x25519mlkem_20260429.txt
wolfSSL/: wolfSSL.I-CUBE-wolfSSL_conf.h
